# EarlyFireDetection

./: README.md
EarlyFireDetection/: EarlyFireDetection.sln  compiler_link.sh
EarlyFireDetection/EarlyFireDetection/: .CMakeLists.txt.un~  .gitignore  CMakeLists.txt  CMakeLists.txt~  boost_test.cmake  cascade.xml  cascade1.xml  clang-tidy.cmake  colorModel.h  compile_commands 2.json  compile_commands.json  ds.cpp  ds.h  earlyfiredetection.sublime-workspace  fireBehaviorAnalysis.cpp  fireBehaviorAnalysis.h  link.sh  main.cpp  motionDetection.cpp  motionDetection.h  opticalFlowTool.h
EarlyFireDetection/EarlyFireDetection/.svn/: wc.db
EarlyFireDetection/EarlyFireDetection/EarlyFireDetection/: CMakeLists.sublime-workspace  CMakeLists.txt  EarlyFireDetection.sublime-project
EarlyFireDetection/EarlyFireDetection/EarlyFireDetection/src/: main.cpp
EarlyFireDetection/EarlyFireDetection/dataset/: cascade2.xml  cascade3.xml
EarlyFireDetection/EarlyFireDetection/src/: colorModel.cpp  colorModel.h  ds.cpp  ds.h  fireBehaviorAnalysis.cpp  fireBehaviorAnalysis.h  fire_detector.cpp  fire_detector.h  main.cpp  motionDetection.cpp  motionDetection.h  nm_detector.cpp  nm_detector.h  opticalFlowTool.cpp  opticalFlowTool.h  vlccap.cpp  vlccap.h
EarlyFireDetection/EarlyFireDetection/tests/: test_bitwise_op.cpp  test_data_driven.cpp
